# markdown-converter

./: .env.example  .flake8  .gitignore  Makefile  README.md  db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-tests.sh  scraper.py  stored_changes.json
.github/workflows/: ci.yml
api_client_sdk/: api_keys.db  app.py  requirements.txt
config/: db_creator.yml  evaluation.yml  processor.yml  token_test.yml
contracts/: CoopHiveV1.json
coophive_sdk/: setup.py  test_load.py
coophive_sdk/coophive_sdk/: client.py  queries.py
descidb/: ChromaClient.py  CreateDB.py  GraphDB.py  Postgres.py  QueryDB.py  TokenRewarder.py  TokenScheduler.py  TokenScheduler.sh  TokenTest.py  __init__.py  chroma_client.py  chunker.py  converter.py  db_creator.py  embedder.py  evaluation_agent.py  graph_db.py  logging_utils.py  main.py  postgres_db.py  processor.py  query_db.py  test.py  token_rewarder.py  token_scheduler.py  token_test.py  utils.py  vectordb.py
descidb/api_client_sdk/: app.py  create_api_keys_db.py
descidb/coophive_sdk/: test_load.py
descidb/coophive_sdk/coophive_sdk/: client.py  queries.py
descidb/core/: __init__.py  chunker.py  converter.py  embedder.py  main.py  processor.py  processor_main.py
descidb/db/: __init__.py  chroma_client.py  db_creator.py  db_creator_main.py  graph_db.py  postgres_db.py
descidb/query/: __init__.py  evaluation_agent.py  evaluation_main.py  query_db.py
descidb/rewards/: __init__.py  token_reward_main.py  token_rewarder.py  token_test.py
descidb/server/: __init__.py  app.py
descidb/server_scraper_db/: TokenRewarder.py  local_papers.py  run_scraper.sh
descidb/types/: __init__.py  chunker.py  converter.py  embedder.py
descidb/utils/: __init__.py  utils.py
docker/: Dockerfile  chunk.Dockerfile  convert.Dockerfile  embed.Dockerfile  job.nomad
erc20-token/: .env.example  .gitignore  README.md  deploy.js  hardhat.config.js  package-lock.json  package.json
erc20-token/contracts/: MyToken.sol
script/: test_docker.py  test_docker.sh
scripts/: help.sh  lint.sh  run.sh  run_db_creator.sh  run_evaluation.sh  run_processor.sh  run_token_reward.sh  setup.sh  start_server.sh  test.sh  test_evaluate.sh
server_scraper_db/: config.json  db.py  local_papers.py  postgres.py  requirements.txt  run_scraper.sh  scraper.py  test_create.py
src/api_client_sdk/: app.py
src/coophive_sdk/coophive_sdk/: __init__.py  queries.py
src/server_scraper_db/: TokenRewarder.py  config.json  db.py  local_papers.py  scraper.py
src/workflow_dvd/: Postgres.py  TokenRewarder.py  TokenScheduler.py  test.py
temp/: tmp.txt
tests/: __init__.py  conftest.py  test_chroma_client.py  test_chunker.py  test_converter.py  test_docker.py  test_embedder.py  test_graph_db.py  test_import.py  test_postgres_db.py  test_query_db.py  test_token_rewarder.py  test_token_scheduler.py  test_token_test.py
tests/integration/: __init__.py  test_db_creator_integration.py  test_evaluation_integration.py  test_processor_integration.py  test_token_reward_integration.py
tests/unit/: __init__.py  test_chroma_client.py  test_chunker.py  test_converter.py  test_embedder.py  test_graph_db.py  test_postgres_db.py  test_query_db.py  test_token_rewarder.py  test_token_test.py
workflow_dvd/: CoopHiveV1.json  Postgres.py  chunker.py  converter.py  embedder.py  processor.py  test.py
