[project]
name = "markdown-converter"
version = "0.0.2"
description = "A comprehensive pipeline for processing research papers into custom databases, supporting conversion, metadata extraction, and querying."
authors = [
    { name = "Vardhan Shorewala" },
    { name = "Matteo Manzi" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3.0",
    "chromadb>=0.3.23,<1.0",
    "openai>=1.50,<2.0",
    "transformers>=4.31,<5.0",
    "PyPDF2>=3.0.1,<3.1",
    "torch>=2.5,<3.0",
    "flask>=3.0,<3.5",
    "psycopg2>=2.6,<3.0",
    "pandas>=2.1.0,<2.3.0",
    "arxivscraper>=0.0.5,<1.0",
    "web3>=7.4,<8.0",
    "pytest>=8.3.0,<8.4.0",
]

[tool.setuptools]
packages = ["descidb"]