[tool.poetry]
name = "descidb"
version = "0.1.0"
description = "A database management system for document processing and embedding"
authors = ["Vardhan Shorewala <vardhanshorewala@coophive.com>"]
readme = "README.md"
packages = [{include = "descidb"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["database", "document-processing", "embedding"]
maintainers = ["Vardhan Shorewala <vardhanshorewala@coophive.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
neo4j = "5.27.0"
certifi = "2025.1.31"
requests = "2.32.3"
psycopg2 = "2.9.9"
numpy = ">=1.22.5,<2.0.0"
chromadb = "0.5.3"
python-dotenv = "1.0.1"
openai = "1.63.0"
PyPDF2 = "3.0.1"
transformers = "4.48.3"
web3 = "7.2.0"
flask = "3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
descidb = "descidb.main:main" 